--- a/style.css
+++ b/style.css
@@ -14,3 +14,12 @@ body {
     background-color: var(--cor-de-fundo);
     color: var(--branco-principal);
 }
+
+.principal {
+    background-image: url("img/Background.png");
+    background-repeat: no-repeat;
+}
+
+.container {
+    height: 100vh;
+}
